B-68612 Tech Debt: FDA: replace Collections.singleton() by Set.of() in package dist-foreign-service