@@ -28,10 +28,10 @@ import org.springframework.stereotype.Component;
 
 import java.math.BigDecimal;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Set;
 
 /**
  * Builder for {@link NtsWorkflowIntegrationTest}.
@@ -204,7 +204,7 @@ public class NtsWorkflowIntegrationTestBuilder implements Builder<Runner> {
 
         private void createScenario() {
             UsageFilter usageFilter = new UsageFilter();
-            usageFilter.setUsageBatchesIds(Collections.singleton(usageBatch.getId()));
+            usageFilter.setUsageBatchesIds(Set.of(usageBatch.getId()));
             usageFilter.setProductFamily("NTS");
             NtsFields ntsFields = new NtsFields();
             ntsFields.setRhMinimumAmount(new BigDecimal("300"));
